--- a/style.css
+++ b/style.css
@@ -11,17 +11,18 @@ body {
     margin: 25px auto;
     border-radius: 10px;
     text-align: center;
-    font-family: Impact, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
 
-button {
+#btn {
     padding: 15px 45px;
     color: rgb(0, 0, 0);
     border-radius: 5px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-button:hover {
-    cursor: pointer
+#btn:hover {
+   background-color: brown;
+   cursor: pointer;
 }
